# micros

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile.builder  GEMINI.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
auth-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
auth-service/docs/: audit-logging.md  bff-request-signing.md  bot-detection.md  email-password-auth.md  observability.md  security-controls.md  service-integration.md  social-login.md
auth-service/docs/spec/: identity-resolution.md
auth-service/migrations/: 001_initial_schema.sql  002_remove_kys.sql  003_add_capabilities.sql  004_superadmin_capability.sql  005_dev_seed_data.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/config/: mod.rs
auth-service/src/db/: mod.rs
auth-service/src/dtos/: admin.rs  auth.rs  mod.rs
auth-service/src/grpc/: admin_service.rs  assignment_service.rs  audit_service.rs  auth_service.rs  authz_service.rs  capability_check.rs  invitation_service.rs  mod.rs  org_service.rs  role_service.rs  service_registry_service.rs  visibility_service.rs
auth-service/src/handlers/: admin.rs  app.rs  assignment.rs  audit.rs  auth.rs  authz.rs  context.rs  invitation.rs  metrics.rs  mod.rs  oauth.rs  org.rs  otp.rs  role.rs  service.rs  user.rs  visibility.rs  well_known.rs
auth-service/src/middleware/: admin.rs  app_auth.rs  auth.rs  bot_detection.rs  metrics.rs  mod.rs  rate_limit.rs  scope_auth.rs  security_headers.rs  service_auth.rs  signature.rs  tenant.rs  tracing.rs
auth-service/src/migrations/: mod.rs  v1_multi_tenant.rs
auth-service/src/models/: audit_event.rs  audit_log.rs  capability.rs  client.rs  invitation.rs  mod.rs  org_assignment.rs  org_node.rs  organization.rs  otp_code.rs  refresh_session.rs  refresh_token.rs  role.rs  service.rs  service_account.rs  tenant.rs  user.rs  user_identity.rs  verification_token.rs  visibility_grant.rs
auth-service/src/services/: admin.rs  auth.rs  database.rs  email.rs  error.rs  jwt.rs  metrics.rs  mod.rs  notification_client.rs  policy.rs  redis.rs  security_audit.rs
auth-service/src/utils/: mod.rs  password.rs  validation.rs
auth-service/tests/: admin_client_test.rs  app_auth_middleware_test.rs  app_token_test.rs  auth_middleware_test.rs  auth_test.rs  bootstrap_test.rs  bot_detection_test.rs  capability_test.rs  client_rate_limit_test.rs  client_rotation_revocation_test.rs  google_oauth_test.rs  health_check_test.rs  introspection_test.rs  login_test.rs  password_reset_test.rs  rate_limit_test.rs  refresh_token_test.rs  security_controls_test.rs  service_account_test.rs  signature_middleware_test.rs  tenant_org_test.rs  user_profile_test.rs  well_known_test.rs
auth-service/tests/common/: mod.rs
document-service/: Cargo.toml  Dockerfile  README.md  build.rs
document-service/docs/: architecture-decisions.md
document-service/src/: lib.rs  main.rs  startup.rs
document-service/src/config/: mod.rs
document-service/src/dtos/: documents.rs  mod.rs  processing.rs
document-service/src/grpc/: capability_check.rs  document_service.rs  mod.rs
document-service/src/handlers/: documents.rs  health.rs  mod.rs
document-service/src/middleware/: mod.rs  tenant.rs  user_id.rs
document-service/src/models/: document.rs  mod.rs
document-service/src/services/: database.rs  metrics.rs  mod.rs  storage.rs
document-service/src/workers/: executor.rs  image_processor.rs  mod.rs  orchestrator.rs  pdf_processor.rs  processor.rs  video_processor.rs
document-service/tests/: capability_test.rs  download_test.rs  health_check.rs  processing_test.rs  upload_test.rs
document-service/tests/common/: mod.rs
genai-service/: Cargo.toml  Dockerfile  README.md  build.rs
genai-service/src/: main.rs  startup.rs
genai-service/src/config/: mod.rs
genai-service/src/grpc/: capability_check.rs  genai_service.rs  mod.rs
genai-service/src/handlers/: health.rs  mod.rs
genai-service/src/models/: mod.rs  session.rs  usage.rs
genai-service/src/services/: database.rs  document_fetcher.rs  metrics.rs  mod.rs
genai-service/tests/: capability_test.rs  grpc_test.rs  health_check.rs
ledger-service/: Cargo.toml  Dockerfile  build.rs
ledger-service/migrations/: 001_initial_schema.sql
ledger-service/src/: lib.rs  main.rs  startup.rs
ledger-service/tests/: account_test.rs  balance_test.rs  capability_test.rs  statement_test.rs  transaction_test.rs
notification-service/: Cargo.toml  Dockerfile  README.md  build.rs
notification-service/src/: lib.rs  main.rs  startup.rs
notification-service/tests/: capability_test.rs  notification_test.rs
payment-service/: Cargo.toml  Dockerfile  PLAN.md  README.md  build.rs
payment-service/src/: lib.rs  main.rs  startup.rs
payment-service/tests/: capability_test.rs  health_check.rs  payment_test.rs
reconciliation-service/: Cargo.toml  Dockerfile  build.rs
reconciliation-service/migrations/: 001_initial_schema.sql
reconciliation-service/src/: lib.rs  main.rs  startup.rs
reconciliation-service/tests/: adjustment_test.rs  bank_account_test.rs  capability_test.rs  matching_rule_test.rs  reconciliation_test.rs  transaction_matching_test.rs
secure-frontend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  package.json  tailwind.config.js
secure-frontend/config/: base.yaml
secure-frontend/docs/: CSS_BUILD.md  design-system.md
secure-frontend/src/: lib.rs  main.rs  startup.rs
secure-frontend/static/: glassmorphic.css  input.css  output.css
secure-frontend/templates/: admin.html  auth_layout.html  dashboard.html  dashboard_layout.html  index.html  layout.html  login.html  register.html
secure-frontend/tests/: health_check.rs
service-core/: Cargo.toml  build.rs
service-core/src/: error.rs  lib.rs
workflow-tests/: Cargo.toml
workflow-tests/src/: lib.rs
workflow-tests/tests/: auth_capability_test.rs  billing_ledger_test.rs  document_genai_test.rs  end_to_end_test.rs  payment_ledger_test.rs  reconciliation_genai_test.rs  smoke_test.rs
(+427 files in other folders)
