[workspace]
members = [
    "auth-service", "document-service",
    "secure-frontend",
    "service-core",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.22"
bson = "2.7"
chrono = "0.4"
config = "0.14"
dotenvy = "0.15"
ed25519-dalek = "2.1"
futures = "0.3"
governor = { version = "0.6", features = ["dashmap"] }
hex = "0.4"
hmac = "0.12"
http = "1.0"
jsonwebtoken = "9.2"
lettre = "0.11"
metrics-exporter-prometheus = "0.13"
mongodb = "2.7"
once_cell = "1.19"
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
opentelemetry_sdk = "0.22"
rand = "0.8"
redis = "0.25"
reqwest = "0.12"
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = "1.28"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["json"] }
validator = "0.18"
uuid = { version = "1.10", features = ["v4", "serde"] }
isbot = "0.1"
dashmap = "6.0"
metrics = "0.23"
http-body-util = "0.1"
serde_urlencoded = "0.7"
subtle = "2.6"
backoff = { version = "0.4", features = ["tokio"] }
tokio-util = "0.7"

# Optimize for faster builds and lower memory usage in dev
[profile.dev]
debug = 1