[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Self-contained authentication microservice with JWT, OAuth, and email verification"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# JWT
jsonwebtoken = "9"

# Password hashing
argon2 = "0.5"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }

# HTTP client for OAuth
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment configuration
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }

# Error handling
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.21"

# Rate limiting
governor = { version = "0.6", features = ["dashmap"] }

# Configuration
config = "0.14"
dashmap = "6.1.0"
http-body-util = "0.1.3"
subtle = "2.6.1"
serde_urlencoded = "0.7.1"
prometheus = "0.14.0"
isbot = "0.1.3"

[dev-dependencies]
tempfile = "3.24.0"
# Testing
tokio-test = "0.4"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
