[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Self-contained authentication microservice with JWT, OAuth, and email verification"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true, features = ["tokio1-native-tls", "smtp-transport"] }
mongodb = { workspace = true, features = ["bson-chrono-0_4"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
rand = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = { workspace = true }
validator = { workspace = true, features = ["derive"] }

# Service-specific dependencies
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
rsa = { version = "0.9", features = ["sha2"] }
dashmap = "6.1.0"
http-body-util = "0.1.3"
subtle = "2.6.1"
serde_urlencoded = "0.7.1"
prometheus = "0.14.0"
isbot = "0.1.3"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true