[package]
name = "document-service"
version = "0.1.0"
edition = "2021"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
futures = "0.3"
axum = { workspace = true, features = ["multipart"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { workspace = true }
mongodb = { workspace = true, features = ["bson-chrono-0_4"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
axum-extra = { workspace = true, features = ["typed-header", "multipart"] }
validator = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
backoff = { workspace = true }
tokio-util = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "multipart"] }
tower = { workspace = true, features = ["util"] }

[lib]
name = "document_service"
path = "src/lib.rs"

[[bin]]
name = "document-service"
path = "src/main.rs"