[package]
name = "genai-service"
version = "0.1.0"
edition = "2021"
description = "GenAI microservice for AI-powered prompt processing with document context"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true, features = ["bson-chrono-0_4"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }

# gRPC dependencies
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = "0.1"

# Observability
prometheus = "0.14.0"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tower = { workspace = true, features = ["util"] }

[lib]
name = "genai_service"
path = "src/lib.rs"

[[bin]]
name = "genai-service"
path = "src/main.rs"
