[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"
authors = ["Sanjeet Sahay <hell@sanjeets.com>"]
description = "Payment processing microservice with Razorpay integration"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
mongodb = { workspace = true, features = ["bson-chrono-0_4"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
validator = { workspace = true, features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Observability & Security
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prometheus = "0.13"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
dashmap = { workspace = true }
http = { workspace = true }
qrcode = "0.12"
image = "0.23.14"
base64 = { workspace = true }
urlencoding = "2.1"

# Razorpay signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# gRPC dependencies
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[lib]
name = "payment_service"
path = "src/lib.rs"

[[bin]]
name = "payment-service"
path = "src/main.rs"
