[package]
name = "reconciliation-service"
version = "0.1.0"
edition = "2021"
authors = ["Sanjeet Sahay <hello@sanjeets.com>"]
description = "Bank statement reconciliation microservice with AI-powered transaction matching"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["rust_decimal"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Observability
prometheus = "0.14.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing-opentelemetry = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"

# Decimal handling for money
rust_decimal = { version = "1.36", features = ["db-postgres", "serde"] }

# Utility
once_cell = "1.19"
regex = "1.10"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10"
tonic = { workspace = true, features = ["transport"] }

[lib]
name = "reconciliation_service"
path = "src/lib.rs"

[[bin]]
name = "reconciliation-service"
path = "src/main.rs"
