[package]
name = "secure-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Templating
askama = { version = "0.12" }
askama_axum = "0.4"

# Sessions
tower-sessions = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment configuration
dotenvy = "0.15"
config = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.44", features = ["serde"] }

[lib]
name = "secure_frontend"
path = "src/lib.rs"

[[bin]]
name = "secure-frontend"
path = "src/main.rs"
