[package]
name = "secure-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
service-core = { path = "../service-core" }

# Workspace dependencies
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
axum-extra = { workspace = true, features = ["cookie"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
validator = { workspace = true, features = ["derive"] }
uuid = { workspace = true }

# Service-specific dependencies
askama = { version = "0.12" }
askama_axum = "0.4"
tower-sessions = "0.12"
time = { version = "0.3.44", features = ["serde"] }
prometheus = "0.14.0"

[lib]
name = "secure_frontend"
path = "src/lib.rs"

[[bin]]
name = "secure-frontend"
path = "src/main.rs"