[package]
name = "service-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
base64 = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mongodb = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
validator = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
isbot = { workspace = true }
dashmap = { workspace = true }
governor = "0.6.3"
metrics = { workspace = true }
http-body-util = { workspace = true }
serde_urlencoded = { workspace = true }
subtle = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.12"