[package]
name = "workflow-tests"
version = "0.1.0"
edition = "2021"
authors = ["Sanjeet Sahay <hello@sanjeets.com>"]
description = "Cross-service workflow integration tests"

[dependencies]
# Service crates (for gRPC client access)
service-core = { path = "../service-core" }
billing-service = { path = "../billing-service" }
invoicing-service = { path = "../invoicing-service" }
reconciliation-service = { path = "../reconciliation-service" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP client for health checks
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
serial_test = "3.0"
tokio-test = "0.4"

[lib]
name = "workflow_tests"
path = "src/lib.rs"
